apps/prod/robson/namespace.yml
# Namespace: robson
# Reference file for kustomization
apiVersion: v1
kind: Namespace
metadata:
  name: robson
  labels:
    app.kubernetes.io/part-of: robson
    environment: production
    istio.io/dataplane-mode: ambient
