apps/prod/robson/backend-svc.yml
# Robson Backend Service
apiVersion: v1
kind: Service
metadata:
  name: robson-backend
  namespace: robson
  labels:
    app.kubernetes.io/name: robson-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: robson
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: robson-backend
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
