apps/prod/robson/httproutes.yml
# HTTPRoute: Robson Frontend
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robson-frontend-route
  namespace: robson
  labels:
    app.kubernetes.io/name: robson-frontend-route
    app.kubernetes.io/part-of: robson
spec:
  parentRefs:
    - name: robson-gateway
      namespace: robson
  hostnames:
    - app.robson.rbx.ia.br
  rules:
    - backendRefs:
        - name: robson-frontend
          port: 80
---
# HTTPRoute: Robson Backend
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robson-backend-route
  namespace: robson
  labels:
    app.kubernetes.io/name: robson-backend-route
    app.kubernetes.io/part-of: robson
spec:
  parentRefs:
    - name: robson-gateway
      namespace: robson
  hostnames:
    - api.robson.rbx.ia.br
  rules:
    - backendRefs:
        - name: robson-backend
          port: 8080
